2005-10-07  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (memrchr) [!HAVE_MEMRCHR]: New prototype.
	(stpcpy) [!HAVE_STPCPY]: Likewise.
	* stpcpy.c: New LGPL'ed file from the GNU C Library.
	* setenv.c: New file.
	* assuan-domain-connect.c (read_int): New function.
	(write_int): New function.
	(domain_reader): Use read_int.
	(domain_sendfd): Use write_int.

2005-10-01  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (assuan_pipe_connect, assuan_pipe_connect2): Make type
	of ARGV parameter const in prototype.
	* assuan-pipe-connect.c (assuan_pipe_connect,
	assuan_pipe_connect2): Likewise in declaration.
	(assuan_pipe_connect2): Add braindead cast to make execv happy.

	* assuan-client.c (assuan_transact): Change LINE, S and D from
	unsigned char * to char * to silence gcc warning.
	* assuan-util.c (_assuan_log_sanitized_string): Add explicit cast
	to silence gcc warning.
	* assuan-inquire.c (assuan_inquire): Likewise.

2005-09-08  Marcus Brinkmann  <marcus@g10code.com>

	* assuan-pipe-connect.c (assuan_pipe_connect2): Add missing
	declaration of PID.

2005-08-09  Werner Koch  <wk@g10code.com>

	* mkerrors: Include config.h into assuan-errors.c.  This is
	required so that assuan.h knows about the W32 macro.

	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: New.
	* assuan-io.c [_ASSUAN_NO_PTH]: New.
	* assuan-pipe-connect.c (fix_signals) [_ASSUAN_NO_FIXED_SIGNALS]: New.
	(assuan_pipe_connect2) [_ASSUAN_USE_DOUBLE_FORK]: Use double fork.
	(fix_signals) [_ASSUAN_USE_DOUBLE_FORK]: Do not wait..
	
2005-05-21  Werner Koch  <wk@g10code.com>

	* assuan-util.c (assuan_set_flag, assuan_get_flag): New.
	* assuan-defs.h (struct assuan_context_s): New field flags.
	* assuan.h (assuan_flag_t): New with one flag value
	ASSUAN_NO_WAITPID for now.
	* assuan-pipe-connect.c (do_finish): Take care of the no_waitpid
	flag.

2005-04-04  Werner Koch  <wk@g10code.com>

	* assuan-util.c (_assuan_calloc): Avoid integer overflow.

2005-03-22  Werner Koch  <wk@g10code.com>
