@@ -259,6 +259,9 @@ void *memrchr (const void *block, int c, size_t size);
 char *stpcpy (char *dest, const char *src);
 #endif
 #ifndef HAVE_SETENV
+#define setenv _assuan_setenv
+#define unsetenv _assuan_setenv
+#define clearenv _assuan_clearenv
 int setenv (const char *name, const char *value, int replace);
 #endif
 
